--- a/main.lyx
+++ b/main.lyx
@@ -919,8 +919,7 @@ Velay.
 
 kilomètres nous séparant du Puy\SpecialChar \nobreakdash-
 en\SpecialChar \nobreakdash-
-Velay, de manière motorisée (en taxi :
- 
+Velay de manière motorisée (en taxi : 
 \emph on
 Aïe !
 \emph default
@@ -1615,7 +1614,7 @@ chef de table
 \end_layout
 
 \begin_layout Standard
-Depuis le début de ce voyage, je m'ouvre d'avantage aux sensations : mon
+Depuis le début de ce voyage, je m'ouvre davantage aux sensations : mon
  corps qui travaille, la faim, la soif...
  Tout est exacerbé, bonheurs comme malheurs.
  Que je me se sens vivante ! Mais, lors de ce repas, j'ai cru assister à
@@ -2426,7 +2425,7 @@ Ce qui est moins simple : régler notre agenda avec celui du monde civilisé,
 \begin_inset Quotes frd
 \end_inset
 
- et l'amour sont deux arts difficiles en eux, et d'avantage combinés ; faire
+ et l'amour sont deux arts difficiles en eux, et davantage combinés ; faire
  le feu par des matinées venteuses et humides ; lire finement le fleuve
  pour naviguer sur son eau de sécheresse ; être aux portes de l'océan, au
  milieu de l'estuaire, et composer avec ses marées, ses vagues, son vent,
@@ -8067,7 +8066,7 @@ Localement, des GRP (Grandes Randonnées de Pays) et d'autres GR viennent
 \end_layout
 
 \begin_layout Standard
-La France est belle ; d'avantage en marchant.
+La France est belle ; davantage en marchant.
  Vous découvrez enfin votre pays, sa population, sa diversité, son caractère,
  son rythme, son histoire, son patrimoine.
  Quelle chance de pouvoir la parcourir sans jamais quitter ses chemins terreux.
